--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,6 @@ npm-debug.log*
 .versions/
 coverage/
 dist/
-node_modules/
 tmp/
 temp/
 hooks/
@@ -27,7 +26,6 @@ platforms/
 plugins/
 plugins/android.json
 plugins/ios.json
-www/
 $RECYCLE.BIN/
 
 .DS_Store
@@ -35,3 +33,5 @@ Thumbs.db
 UserInterfaceState.xcuserstate
 *.pyc
 app/__pycache__
+app/ux/www/
+app/ux/node_modules/
