--- a/docker/monstergen/conf/nginx/monstergen.conf
+++ b/docker/monstergen/conf/nginx/monstergen.conf
@@ -6,9 +6,9 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
     }
     location /build {
-        root /monstergen/app/ux/www;
+        root /encountergenux/www;
     }
     location /assets {
-        root /monstergen/app/ux/www;
+        root /encountergenux/www;
     }
 }
