--- a/docker/monstergen/conf/supervisord/conf.d/server.conf
+++ b/docker/monstergen/conf/supervisord/conf.d/server.conf
@@ -1,3 +1,3 @@
-[program:monstergen]
+[program:encountergen]
 command = gunicorn main:app -b localhost:5000 --reload
-directory = /monstergen/app
+directory = /encountergen
