--- a/docker/encountergen/conf/supervisord/conf.d/server.conf
+++ b/docker/encountergen/conf/supervisord/conf.d/server.conf
@@ -1,3 +1,3 @@
 [program:encountergen]
-command = gunicorn main:app -b localhost:5000 --reload
+command = gunicorn main:app -b localhost:5000 --reload --reload-engine poll
 directory = /encountergen
